test resolve bug with lodging on firefox

--- a/CSS/small.css
+++ b/CSS/small.css
@@ -1,6 +1,12 @@
 /* Small devices (phones, less than 768px) */
 /* largeur min 320px */
 @media (max-width: 767.98px) {
+	.main-container {
+		padding: 0;
+	}
+	.lodging-and-popular {
+		flex-direction: column-reverse;
+	}
 	.lodging-cards,
 	.popular-cards,
 	.activities-cards,
